my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/20010206-1.ll.err
20010206-1.c:8:5: error: call to undeclared library function 'abort' with type 'void (void) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    8 |     abort ();
      |     ^
20010206-1.c:8:5: note: include the header <stdlib.h> or explicitly provide a declaration for 'abort'
20010206-1.c:9:3: error: call to undeclared library function 'exit' with type 'void (int) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    9 |   exit (0);
      |   ^
20010206-1.c:9:3: note: include the header <stdlib.h> or explicitly provide a declaration for 'exit'
2 errors generated.
